# backend_typescript_service/src/public/swagger.json
@@ -44,12 +44,12 @@
 					"created_at": {
 						"type": "string",
 						"format": "date-time",
-						"default": "2026-03-26T18:13:11.586Z"
+						"default": "2026-03-26T18:42:01.116Z"
 					},
 					"updated_at": {
 						"type": "string",
 						"format": "date-time",
-						"default": "2026-03-26T18:13:11.587Z"
+						"default": "2026-03-26T18:42:01.117Z"
 					},
 					"user": {
 						"properties": {
